--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "ngx-bootstrap": "^1.6.6",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.3.0",
-    "zone.js": "^0.8.5"
+    "zone.js": "^0.8.5",
+    "leaflet-area-select": "^1.0.3"
   },
   "devDependencies": {
     "css-loader": "^0.28.0",
@@ -62,6 +63,7 @@
     "typescript": "^2.2.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
-    "webpack-cleanup-plugin": "^0.5.1"
+    "webpack-cleanup-plugin": "^0.5.1",
+    "typings": "^2.1.1"
   }
 }
