--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.0.3",
+    "leaflet-area-select": "^1.0.3",
     "leaflet.vectorgrid": "^1.2.0",
     "ngx-bootstrap": "^1.6.6",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.3.0",
-    "zone.js": "^0.8.5",
-    "leaflet-area-select": "^1.0.3"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "css-loader": "^0.28.0",
@@ -61,9 +61,9 @@
     "tslint": "^5.1.0",
     "tslint-loader": "^3.5.2",
     "typescript": "^2.2.2",
+    "typings": "^2.1.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
-    "webpack-cleanup-plugin": "^0.5.1",
-    "typings": "^2.1.1"
+    "webpack-cleanup-plugin": "^0.5.1"
   }
 }
