--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/es6-shim": "^0.31.32",
     "@types/geojson": "1.0.1",
     "@types/leaflet": "^1.0.60",
+    "autolinker": "^1.4.3",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.0.3",
