--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "homepage": "https://github.com/haoliangyu/ngx-leaflet-starter#readme",
   "dependencies": {
+    "@angular/animations": "4.0.2",
     "@angular/common": "^4.0.2",
     "@angular/compiler": "^4.0.2",
     "@angular/core": "^4.0.2",
+    "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.0.2",
     "@angular/http": "^4.0.2",
+    "@angular/material": "^2.0.0-beta.7",
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@types/es6-shim": "^0.31.32",
@@ -37,6 +40,7 @@
     "autolinker": "^1.4.3",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "leaflet": "^1.0.3",
     "leaflet-area-select": "^1.0.3",
     "leaflet.vectorgrid": "^1.2.0",
@@ -66,5 +70,6 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
     "webpack-cleanup-plugin": "^0.5.1"
-  }
+  },
+  "peerDependencies": {}
 }
