--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "intro.js": "^2.8.0-alpha.1",
     "leaflet": "^1.0.3",
     "leaflet-area-select": "^1.0.3",
     "leaflet.vectorgrid": "^1.2.0",
