--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "intro.js": "^2.8.0-alpha.1",
     "leaflet": "^1.0.3",
     "leaflet-area-select": "^1.0.3",
+    "leaflet-spin": "^1.1.0",
     "leaflet.vectorgrid": "^1.2.0",
     "ngx-bootstrap": "^1.6.6",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.3.0",
+    "spin": "^0.0.1",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
