--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.3.0",
     "spin": "^0.0.1",
+    "yarn": "^1.3.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
